# logos-engine

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: frameworks.yaml  rules.yaml
src/logos_engine/: __init__.py  cli.py
src/logos_engine/agents/: argument_builder.py  assumption_detector.py  auditors.py  base.py  claim_extractor.py  document_ingestor.py  evidence_mapper.py  explanation_composer.py  orchestrator.py
src/logos_engine/agents/ethics/: __init__.py  dilemma_structurer.py  ethical_evaluator.py  framework_librarian.py
src/logos_engine/config/: settings.py
src/logos_engine/ontology/: graph.py  models.py  relations.py
src/logos_engine/reasoning/: __init__.py  scoring.py  trace.py
src/logos_engine/rules/: __init__.py  builtin_rules.py  rulebook.py
src/logos_engine/storage/: audit_log.py  json_graph_store.py  sqlite_index.py
src/logos_engine/utils/: clamp.py  text.py
tests/: test_ontology_roundtrip.py  test_rulebook.py  test_scoring.py  test_trace.py
